--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
-
 language: cpp
-
 script:
   - cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install -DBUILD_TESTS=ON
-  - cmake —build _build
-  - cmake —build _build —target install
-  - cmake —build _build —target test — ARGS=--verbose
-
+  - cmake --build _build
+  - cmake --build _build --target install
+  - cmake --build _build --target test -- ARGS=--verbose
 addons:
 apt:
 sources:
@@ -14,4 +11,3 @@ sources:
 packages:
   - cmake
   - cmake-data
-
